syntax = "proto3";

package agency;

import "common.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "./pb";

service AgencyService {
    rpc AddDiveMaster(AddDiveMasterRequest) returns (google.protobuf.Empty);
    rpc AddStaff(AddStaffRequest) returns (google.protobuf.Empty);
    rpc AddTripTemplate(AddTripTemplateRequest) returns (google.protobuf.Empty);
    rpc AddTrip(AddTripRequest) returns (google.protobuf.Empty);
}

message Agency {
    string name = 1;
    string phone_number = 2;
    common.Address address = 3;
}

message DiveMaster {
    string first_name = 1;
    string last_name = 2;
    common.Level level = 3;
    string card_front = 4;
    string card_back = 5;
}

message Staff {
    string first_name = 1;
    string last_name = 2;
    string position = 3;
}

message DivingBoat {
    string boat_model = 1;
    bytes boat_image = 2;
}

message Trip {
    google.protobuf.Timestamp from = 1 [(gogoproto.stdtime) = true];
    google.protobuf.Timestamp to = 2 [(gogoproto.stdtime) = true];
    int32 max_capacity = 3;
    int32 price_per_pserson = 4;
}

message TripTemplate {
    string name = 1;
    string description = 2;
    DivingBoat diving_boat = 3;
}

message AddDiveMasterRequest {
    DiveMaster dive_master = 1;
    string agency_name = 2;
}

message AddStaffRequest {
    Staff staff = 1;
    string agency_name = 2;
}

message AddTripTemplateRequest {
    TripTemplate trip_template = 1;
    string agency_name = 2;
}

message AddTripRequest {
    Trip trip = 1;
    TripTemplate trip_template = 2;
    string agency_name = 3;
}